--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,4 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
+@import "tailwindcss";
 body {
   margin: 0;
   min-width: 100%;  /* Removed min-width: 320px */
@@ -35,15 +21,3 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-}
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
